# py-wave-runup

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  Makefile  README.rst  environment.yml  justfile  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: new-runup-model.md
docs/: Makefile  background.rst  conf.py  datasets.rst  ensembles.rst  index.rst  installation.rst  models.rst  requirements.txt  usage.rst
examples/: README.rst  plot_reverse_shoaling.py  plot_stockdon.py  reverse_shoaling.py
py_wave_runup/: __init__.py  datasets.py  ensembles.py  models.py  utils.py
py_wave_runup/data/: power18.csv
py_wave_runup/data/beuzen18/: generate_beuzen18_model.py  lidar_runup_data_for_GP_training.csv
py_wave_runup/datasets/: gp_runup_model.joblib  power18.csv
py_wave_runup/datasets/beuzen18/: generate_beuzen18_model.py  gp_runup_model.joblib
tests/: README_generate_beuzen18_tests.md  test_datasets.py  test_ensembles.py  test_generate_beuzen18_model.py  test_models.py  test_utils.py
