[tool.poetry]
name = "py-wave-runup"
version = "0.1.10"
description = "Empirical wave runup models implemented in Python"
authors = ["Chris Leaman"]
license = "GPL-3.0+"
readme = 'README.rst'
repository = 'https://github.com/chrisleaman/py-wave-runup'
homepage = 'https://github.com/chrisleaman/py-wave-runup'
documentation = 'https://py-wave-runup.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
numpy = "^1.16"
pandas = "^0.25.3"
joblib = "^0.14.1"

[tool.poetry.dev-dependencies]
black = {version = ">=18.3,<20.0", allow-prereleases = true}
coverage = "^5.1"
codecov = "^2.1"
pre-commit = "^2.1"
pytest-runner = "^5.1"
pytest = "^5.4"
pytest-cov = "^2.9"
scikit-learn = "^0.23"
sphinx = "^3.0"
sphinx-gallery = "^0.5.0"
tox = "^3.15"
tomlkit = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
