[tool.poetry]
name = "py-wave-runup"
version = "0.1.10"
description = "Empirical wave runup models implemented in Python"
authors = ["Chris Leaman"]
license = "GPL-3.0+"
readme = 'README.rst'
repository = 'https://github.com/chrisleaman/py-wave-runup'
homepage = 'https://github.com/chrisleaman/py-wave-runup'
documentation = 'https://py-wave-runup.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
numpy = "^1.16"
pandas = "^1.0"
joblib = ">=0.14.1,<1.1.0"

[tool.poetry.dev-dependencies]
coverage = "^5.0"
codecov = "^2.1"
pre-commit = "^2.14"
pytest-runner = "^5.1"
pytest = "^6.2"
pytest-cov = "^2.8"
sphinx = "^4.1"
sphinx-gallery = "^0.9.0"
tox = "^3.24"
tomlkit = "^0.7.0"
black = "^21.9b0"
matplotlib = "^3.4.3"
scikit-learn = {version = "^0.24.2", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
