[project]
name = "py-wave-runup"
version = "0.1.12"
description = "Empirical wave runup models implemented in Python"
authors = [{name = "Chris Leaman"}]
license = {text = "GPL-3.0+"}
readme = "README.rst"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/chrisleaman/py-wave-runup"
Repository = "https://github.com/chrisleaman/py-wave-runup"
Documentation = "https://py-wave-runup.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_wave_runup"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
addopts = "--cov=py_wave_runup --cov-report term-missing --doctest-modules --ignore=docs"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[dependency-groups]
dev = [
    "coverage>=7.3",
    "codecov>=2.1",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "sphinx>=7.2",
    "sphinx-gallery>=0.14",
    "tomlkit>=0.12",
    "black>=23.9",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "twine>=5.0",
]
